--- a/src/app/pages/employes/list/list.component.html
+++ b/src/app/pages/employes/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="employee-list-container">
     <div class="header">
-      <h2>Employee List</h2>
+      <h4>Employee List</h4>
       <button mat-raised-button color="primary" (click)="addEmployee()">Add Employee</button>
     </div>
   
@@ -13,59 +13,71 @@
       <mat-label>Filter Group</mat-label>
       <input matInput [(ngModel)]="filterGroup" (keyup)="applyFilter()" />
     </mat-form-field>
+
+    <div class="table-wrapper">
+      <table mat-table [dataSource]="dataSource" matSort [class.sticky-header]="dataSource.data.length > 10">
+    
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
+          <td mat-cell *matCellDef="let element">{{ element.username }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.firstName }} {{ element.lastName }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="birthDate">
+          <th mat-header-cell *matHeaderCellDef>Birth Date</th>
+          <td mat-cell *matCellDef="let element">{{ element.birthDate | date }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="basicSalary">
+          <th mat-header-cell *matHeaderCellDef>Salary</th>
+          <td mat-cell *matCellDef="let element">Rp {{ element.basicSalary | number:'1.0-0' }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="group">
+          <th mat-header-cell *matHeaderCellDef>Group</th>
+          <td mat-cell *matCellDef="let element">{{ element.group }}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-button color="accent" (click)="editEmployee(element)" class="edit-button">
+              <mat-icon aria-hidden="false" aria-label="Example edit icon" fontIcon="edit" ></mat-icon>
+            </button>
+            <button mat-button color="warn" (click)="deleteEmployee(element)">
+              <mat-icon aria-hidden="false" aria-label="Example delete icon" fontIcon="delete"></mat-icon>
+            </button>
+            
+          </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+    </div>
   
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z10">
-  
-      <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
-        <td mat-cell *matCellDef="let element">{{ element.username }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.firstName }} {{ element.lastName }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="birthDate">
-        <th mat-header-cell *matHeaderCellDef>Birth Date</th>
-        <td mat-cell *matCellDef="let element">{{ element.birthDate | date }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="basicSalary">
-        <th mat-header-cell *matHeaderCellDef>Salary</th>
-        <td mat-cell *matCellDef="let element">Rp {{ element.basicSalary | number:'1.0-0' }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="group">
-        <th mat-header-cell *matHeaderCellDef>Group</th>
-        <td mat-cell *matCellDef="let element">{{ element.group }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-button color="accent" (click)="editEmployee(element)">Edit</button>
-          <button mat-button color="warn" (click)="deleteEmployee(element)">Delete</button>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
   
     <mat-paginator
       [pageSizeOptions]="[ 10, 25, 50]"
       showFirstLastButtons
     ></mat-paginator>
+
+
+    <notifier-container></notifier-container>
   </div>
   
