--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .w-full {
     width: 100%;
 }
+h1,h2,h3,h4,h5,h6 {
+    margin-bottom: 0;
+}
+
+
+@import "angular-notifier/styles";
