--- a/src/app/pages/employes/list/list.component.scss
+++ b/src/app/pages/employes/list/list.component.scss
@@ -5,7 +5,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 16px;
+      // margin-bottom: 16px;
     }
   
     mat-form-field {
@@ -36,14 +36,6 @@
       margin: 0;
     }
 
-
-    // .edit-button {
-    //   color: #fbc02d; // Material Yellow 700
-    
-    //   &:hover {
-    //     background-color: rgba(251, 192, 45, 0.1); // sedikit highlight saat hover
-    //   }
-    // }
 
     
   }
