--- a/src/app/pages/employes/detail/detail.component.html
+++ b/src/app/pages/employes/detail/detail.component.html
@@ -1,1 +1,54 @@
-<p>detail works!</p>
+<div class="container-card">
+  <mat-card class="detail-card">
+    <div class="bg-image">
+      <div class="title-card">
+        <h2>{{ employee.username }}</h2>
+      </div>
+    </div>
+
+    <mat-card-content>
+      <div class="detail-grid">
+
+        <div class="flex">
+          <span class="label">Full Name</span>
+          <span class="value">{{ employee.firstName }} {{ employee.lastName }}</span>
+        </div>
+
+        <div class="flex">
+          <span class="label">Email</span>
+          <span class="value">{{ employee.email }}</span>
+        </div>
+
+        <div class="flex">
+          <span class="label">Birth Date</span>
+          <span class="value">{{ employee.birthDate | date: 'longDate' }}</span>
+        </div>
+
+        <div class="flex">
+          <span class="label">Basic Salary</span>
+          <span class="value">{{ formatCurrency(employee.basicSalary) }}</span>
+        </div>
+
+        <div class="flex">
+          <span class="label">Status</span>
+          <span class="value">{{ employee.status }}</span>
+        </div>
+
+        <div class="flex">
+          <span class="label">Group</span>
+          <span class="value">{{ employee.group }}</span>
+        </div>
+
+        <div class="flex">
+          <span class="label">Description</span>
+          <span class="value">{{ employee.description }}</span>
+        </div>
+
+      </div>
+    </mat-card-content>
+
+    <mat-card-actions align="end">
+      <button mat-flat-button class="yellow-bg" (click)="goBack()">OK</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
