--- a/src/app/pages/employes/add/add.component.html
+++ b/src/app/pages/employes/add/add.component.html
@@ -5,7 +5,7 @@
         <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
           <div class="form-grid">
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Username</mat-label>
               <input matInput formControlName="username" required />
               <mat-error *ngIf="employeeForm.get('username')?.hasError('required')">
@@ -13,7 +13,7 @@
               </mat-error>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>First Name</mat-label>
               <input matInput formControlName="firstName" required />
               <mat-error *ngIf="employeeForm.get('firstName')?.hasError('required')">
@@ -21,7 +21,7 @@
               </mat-error>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Last Name</mat-label>
               <input matInput formControlName="lastName" required />
               <mat-error *ngIf="employeeForm.get('lastName')?.hasError('required')">
@@ -29,7 +29,7 @@
               </mat-error>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Email</mat-label>
               <input matInput formControlName="email" />
               <mat-error *ngIf="employeeForm.get('email')?.hasError('email')">
@@ -37,7 +37,7 @@
               </mat-error>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Birth Date</mat-label>
               <input matInput [matDatepicker]="picker" formControlName="birthDate" />
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -47,7 +47,7 @@
               </mat-error>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Basic Salary</mat-label>
               <input matInput type="number" formControlName="basicSalary" />
               <mat-error *ngIf="employeeForm.get('basicSalary')?.hasError('required')">
@@ -55,7 +55,7 @@
               </mat-error>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Status</mat-label>
               <!-- <input matInput formControlName="status" /> -->
               <mat-select formControlName="status" >
@@ -63,7 +63,7 @@
               </mat-select>
             </mat-form-field>
       
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Group</mat-label>
               <mat-select formControlName="group" [compareWith]="compareGroup" name="group">
                 <mat-option>
@@ -73,7 +73,7 @@
               </mat-select>
             </mat-form-field>
       
-            <mat-form-field appearance="fill" class="full-width">
+            <mat-form-field appearance="outline" class="full-width">
               <mat-label>Description</mat-label>
               <textarea matInput formControlName="description"></textarea>
             </mat-form-field>
