--- a/src/app/pages/employes/list/list.component.html
+++ b/src/app/pages/employes/list/list.component.html
@@ -14,7 +14,7 @@
       <input matInput [(ngModel)]="filterGroup" (keyup)="applyFilter()" />
     </mat-form-field>
 
-    <div class="table-wrapper">
+    <div class="table-wrapper mat-elevation-z8" >
       <table mat-table [dataSource]="dataSource" matSort [class.sticky-header]="dataSource.data.length > 10">
     
         <ng-container matColumnDef="username">
@@ -28,7 +28,7 @@
         </ng-container>
     
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
           <td mat-cell *matCellDef="let element">{{ element.email }}</td>
         </ng-container>
     
@@ -55,6 +55,9 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let element">
+            <button mat-button (click)="toDetails(element.username)" class="info-icon" >
+              <mat-icon aria-hidden="false" aria-label="Example edit icon" fontIcon="info" class="info-icon" ></mat-icon>
+            </button>
             <button mat-button color="accent" (click)="editEmployee(element)" class="edit-button">
               <mat-icon aria-hidden="false" aria-label="Example edit icon" fontIcon="edit" ></mat-icon>
             </button>
@@ -66,7 +69,7 @@
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
       </table>
 
     </div>
