add logo , update list , update detail and add employee

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper">
     <div class="login-box">
       <div class="login-header">
-        <img src="assets/logo.png" alt="Logo" class="logo" />
+        <img src="image/staff.png" alt="Logo" class="logo" />
         <h1>Employee Management</h1>
         <p>Welcome back! Please login to your account</p>
       </div>
