--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -56,9 +56,9 @@
     }
   }
 
-  @media (max-width: 600px) {
-    .login-box {
-      padding: 24px;
+  @media (max-width: 580px) {
+    .login-wrapper {
+      padding: 1rem;
       h1 {
         font-size: 1.5rem;
       }
