--- a/src/app/pages/employes/list/list.component.scss
+++ b/src/app/pages/employes/list/list.component.scss
@@ -20,6 +20,7 @@
       thead {
         position: sticky;
         top: 0;
+        z-index: 10;
       }
     }
 
@@ -92,6 +93,44 @@
   
   .demo-row-is-clicked {
     font-weight: bold;
+  }
+
+
+  @media screen and (max-width : 768px) {
+    .employee-list-container {
+      padding: 2rem;
+      
+      .header {
+        margin-bottom: 2rem;
+      }
+
+      .wrapper-filter {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .mat-form-field {
+        margin: 0;
+      }
+    }
+  }
+
+
+  @media screen and (max-width : 580px) {
+    .employee-list-container {
+      padding: 1rem;
+
+      .header {
+        margin-bottom: 1rem;
+        flex-direction: column;
+        align-items: normal;
+      }
+
+      .add-btn {
+        max-width: 150px;
+        margin-left: auto;
+      }
+    }
   }
 
  
