update readme and update detail

--- a/src/app/pages/employes/detail/detail.component.scss
+++ b/src/app/pages/employes/detail/detail.component.scss
@@ -70,6 +70,16 @@
       background-color: #FF9B17;
       // padding: .5rem 2rem;
     }
+
+    // .mdc-button {
+    //   min-width: 45px;
+    //   padding: 4px !important;
+    // }
+
+    // .mat-mdc-button {
+    //   min-width: 45px;
+    //   padding: 4px !important;
+    // }
 }
 
 @media screen and (max-width : 768px) {
